# Performance and debugging related options
option('profiling', type: 'boolean', value: false)

option('static', type: 'boolean', value: false,
  description: 'Build as a static library'
)

option('introspection', type: 'feature', value: 'auto')
option('vapi', type: 'boolean', value: true)

# Subproject
option('package_subdir', type: 'string',
  description: 'Subdirectory to append to all installed files, for use as subproject'
)

option('gtk_doc',
       type: 'boolean', value: false,
       description: 'Whether to generate the API reference for Handy')

option('tests',
       type: 'boolean', value: true,
       description: 'Whether to compile unit tests')

option('examples',
       type: 'boolean', value: true,
       description: 'Build and install the examples and demo applications')

option('glade_catalog', type: 'feature', value: 'auto',
       description: 'Install a glade catalog file')
